tests/invalid_scir_h/legacy_brace_syntax.scirh
module invalid.legacy {
fn bad() -> int ! {
  return 1;
}
}
